--- a/00_download_check-md5_parse-fastq.ipynb
+++ b/00_download_check-md5_parse-fastq.ipynb
@@ -1598,11 +1598,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# see how many trimmed files were made\n",
-    "DIR = '/home/lindb/testdata'\n",
-    "\n",
-    "dirs = !ls -d */\n"
+    "!cat /home/lindb/scancel.txt | parallel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
