--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3929,9 +3929,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4011,9 +4011,9 @@
     "#SBATCH --job-name=kick%s\n",
     "#SBATCH --export=all\n",
     "#SBATCH --output=kick%s_%%j.out \n",
-    "#SBATCH --mail-user=lindb@vcu.edu\n",
-    "#SBATCH --mail-type=FAIL\n",
     "\n",
+    "source activate py27\n",
+    "cd $HOME/pipeline\n",
     "python 02_mark_build_scatter.py %s %s %s %s\n",
     "''' % (str(count).zfill(2),\n",
     "       str(count).zfill(2),\n",
@@ -4031,7 +4031,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import path as op\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -4094,10 +4104,13 @@
     }
    ],
    "source": [
+    "fdir = '/home/lindb/testdata/shfiles/kick'\n",
+    "assert op.exists(fdir)\n",
     "os.chdir(fdir)\n",
     "for f in fs(fdir):\n",
-    "    print f\n",
-    "    os.system('sbatch %s' % f)"
+    "    if f.endswith('sh'):\n",
+    "        print f\n",
+    "        os.system('sbatch %s' % f)"
    ]
   },
   {
