scheduler rescheduler gvcf_helper

--- a/02_misc.ipynb
+++ b/02_misc.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1+2"
+    "1+3"
    ]
   },
   {
@@ -823,6 +823,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## gatk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/home/lindb/testdata/shfiles/gvcf_shfiles/'\n",
+    "files = [f for f in fs(DIR) if '.out' in f]\n",
+    "print len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pids = []\n",
+    "for s in files:\n",
+    "    s = op.basename(s)\n",
+    "    pids.append(int(s.split(\"_\")[1].split(\".out\")[0]))\n",
+    "len(pids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mems  = []\n",
+    "times = []\n",
+    "for p in pids:\n",
+    "    info = !seff $p\n",
+    "    mem  = math.ceil(float([x for x in info if 'Memory Utilized' in x][0].split(\" \")[2]))\n",
+    "    if mem > 4:\n",
+    "        print p\n",
+    "    hours,minutes,seconds = [x for x in info if 'Job Wall-clock time' in x][0].split(\" \")[-1].split(\":\")\n",
+    "    time = (int(hours)*60)+int(minutes)+(int(seconds)/60)\n",
+    "    times.append(time)\n",
+    "    mems.append(mem)\n",
+    "np.mean(mems),np.mean(times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(mems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(mems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/scratch/lindb/data'\n",
+    "for root,dirs,files in os.walk(DIR):\n",
+    "    for d in dirs:\n",
+    "        print d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# sbatch startfiles"
    ]
   },
@@ -1542,18 +1650,146 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# test out error reading"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DIR = '/scratch/lindb/practice/shfiles/shfiles/gvcf_shfiles/'\n",
+    "files = [f for f in fs(DIR) if 'checked' in f]\n",
+    "for f in files:\n",
+    "    dst = f.replace('_checked','')\n",
+    "    shutil.move(f,dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles'\n",
+    "files = fs(DIR)[0:5]\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [y for y in range(10)]\n",
+    "shuffle(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = open('/scratch/lindb/practice/shfiles/shfiles/gvcf_shfiles/JP_p101_cap1_kit1_scaff001-010.sh').read()\n",
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('/scratch/lindb/testdata/datatable.txt',sep='\\t')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni(data['ploidy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/'\n",
+    "files = [f for f in fs(DIR) if '.sh' in f]\n",
+    "len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h2 = os.popen(\"squeue -u lindb | grep 'lindb'\").read().split(\"\\n\")\n",
+    "h2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in h[1:]:\n",
+    "    line = line.split()\n",
+    "    print line\n",
+    "    pid = int(line[0])\n",
+    "    print pid\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [f for f in fs('/scratch/lindb/testdata/shfiles/gvcf_shfiles') if '.sh' in f]\n",
+    "len(files)"
+   ]
   },
   {
    "cell_type": "code",
