--- a/02_misc.ipynb
+++ b/02_misc.ipynb
@@ -1662,7 +1662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIR = '/scratch/lindb/practice/shfiles/shfiles/gvcf_shfiles/'\n",
+    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/'\n",
     "files = [f for f in fs(DIR) if 'checked' in f]\n",
     "for f in files:\n",
     "    dst = f.replace('_checked','')\n",
@@ -1676,109 +1676,8 @@
    "outputs": [],
    "source": [
     "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles'\n",
-    "files = fs(DIR)[0:5]\n",
-    "files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from random import shuffle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = [y for y in range(10)]\n",
-    "shuffle(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = open('/scratch/lindb/practice/shfiles/shfiles/gvcf_shfiles/JP_p101_cap1_kit1_scaff001-010.sh').read()\n",
-    "print x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('/scratch/lindb/testdata/datatable.txt',sep='\\t')\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uni(data['ploidy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/'\n",
-    "files = [f for f in fs(DIR) if '.sh' in f]\n",
+    "files = [f for f in fs(DIR) if f.endswith('.sh')]\n",
     "len(files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h2 = os.popen(\"squeue -u lindb | grep 'lindb'\").read().split(\"\\n\")\n",
-    "h2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for line in h[1:]:\n",
-    "    line = line.split()\n",
-    "    print line\n",
-    "    pid = int(line[0])\n",
-    "    print pid\n",
-    "    break"
    ]
   },
   {
@@ -1788,8 +1687,290 @@
    "outputs": [],
    "source": [
     "files = [f for f in fs('/scratch/lindb/testdata/shfiles/gvcf_shfiles') if '.sh' in f]\n",
+    "len(files),27202-len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sq = os.popen(\"squeue -u lindb | grep 'R 2'\").read().split(\"\\n\")\n",
+    "pids = []\n",
+    "for s in sq:\n",
+    "    if not s == '':\n",
+    "    #     print s\n",
+    "        pid = s[0]\n",
+    "        pids.append(pid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outs = [f for f in fs('/scratch/lindb/testdata/shfiles/gvcf_shfiles') if f.endswith('.out') and 'checked' not in f]\n",
+    "len(outs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/'\n",
+    "files = [f for f in fs(DIR) if f.endswith('.out') and 'checked' not in f]\n",
+    "count = 0\n",
+    "for f in files:\n",
+    "    o = open(f,'r').readlines()\n",
+    "    for line in o:\n",
+    "        line = line.lower()\n",
+    "#         if 'time limit' in line and not 'found' in line:\n",
+    "#             print line\n",
+    "#             count += 1\n",
+    "        if 'oom-kill' in line:\n",
+    "            print f\n",
+    "            print line\n",
+    "#             print line\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/'\n",
+    "files = [f for f in fs(DIR) if f.endswith('.sh')]\n",
     "len(files)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "files[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/home/lindb/scratch/practice/shfiles/mark000_11353134.out','r') as f:\n",
+    "    o = f.readlines()\n",
+    "o[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dname = '/scratch/lindb/testdata/'\n",
+    "DIR = op.join(dname,'shfiles/gvcf_shfiles') # real deal\n",
+    "            if 'oom-kill' in o[-1]:\n",
+    "                if 'time limit' in o[-2].lower():\n",
+    "                    # look for time error\n",
+    "                    edited = True\n",
+    "                    # time error could be caused by the original sh command running out of time or ...\n",
+    "                    ## ... gvcf_helper.py ran out of time\n",
+    "                    print 'due to time limit'\n",
+    "                    # determine if its original or gvcf_helper\n",
+    "                    linked = False\n",
+    "                    for line in o[::-1]:\n",
+    "                        if 'unlinking' in line:\n",
+    "                            # we dont necessarily need to increase time if last call was due to gvcf_helper.py\n",
+    "                            linked = True\n",
+    "                            print 'linked',linked\n",
+    "                            break\n",
+    "                    if linked == True:\n",
+    "                        # no need to change time this first time\n",
+    "                        print 'leaving orginal time as-is'\n",
+    "                        for line in o[::-1]:\n",
+    "                            if dname in line and line.endswith('.sh\\n'):\n",
+    "                                print line\n",
+    "                                shfile = line.replace(\"\\n\",\"\")\n",
+    "                                print 'sbatching %s' % shfile\n",
+    "            #                                 os.system('sbatch %s' % shfile)\n",
+    "                                # unlink \n",
+    "                                bname = op.basename(shfile)\n",
+    "                                linkname = op.join(DIR,bname)\n",
+    "                                print 'exists',op.exists(linkname)\n",
+    "                                print 'linkname=',linkname\n",
+    "                                try:\n",
+    "            #                             os.system('unlink %s' % linkname)\n",
+    "                                    print 'unlinked %s' % linkname\n",
+    "                                except OSError as e:\n",
+    "                                    print 'no symlink to unlink: %s' % linkname\n",
+    "                                    pass\n",
+    "                                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.symlink('/scratch/lindb/testdata/LP_mg_cap5_kit1/shfiles/gvcf_shfiles/LP_mg44_cap5_kit1_scaff275-276.sh',\n",
+    "           '/scratch/lindb/testdata/shfiles/gvcf_shfiles/LP_mg44_cap5_kit1_scaff275-276.sh'\n",
+    "          )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = op.join('/scratch/lindb/testdata/','shfiles/gvcf_shfiles')\n",
+    "op.exists(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dname"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samp2pool = pickle.load(open('/scratch/lindb/testdata/samp2pool.pkl'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shfile = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/LP_mg64_cap2_kit1_scaff709-710.sh'\n",
+    "samp = op.basename(shfile).split(\"_scaff\")[0]\n",
+    "pool = samp2pool[samp]\n",
+    "pooldir = op.join(dname,pool)\n",
+    "poolshdir = op.join(pooldir,'shfiles/gvcf_shfiles')\n",
+    "trushfile = op.join(poolshdir,op.basename(shfile))\n",
+    "op.exists(trushfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(10):\n",
+    "    print 'base',i\n",
+    "    if i < 5:\n",
+    "        print 'first',i\n",
+    "        if i > 2:\n",
+    "            print 'second',i\n",
+    "            for j in range(5):\n",
+    "                if j > 3:\n",
+    "                    print i,j\n",
+    "                    break\n",
+    "            print 'heyo'\n",
+    "i,j\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# check mem of files that have run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DIR = '/scratch/lindb/testdata/shfiles/gvcf_shfiles/'\n",
+    "outs = [f for f in fs(DIR) if f.endswith('out')]\n",
+    "len(outs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times = []\n",
+    "mems = []\n",
+    "for o in outs:\n",
+    "    pid = op.basename(o).split(\"_checked\")[0].split(\"_\")[1]\n",
+    "    print pid\n",
+    "    info = !seff $pid\n",
+    "    mem  = math.ceil(float([x for x in info if 'Memory Utilized' in x][0].split(\" \")[2]))\n",
+    "    hours,minutes,seconds = [x for x in info if 'Job Wall-clock time' in x][0].split(\" \")[-1].split(\":\")\n",
+    "    time = (int(hours)*60)+int(minutes)+(int(seconds)/60)\n",
+    "    times.append(time)\n",
+    "    mems.append(mem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
